# openaprs

./: .gitignore  INSTALL  Makefile.am  NEWS  README  README.md  TODO  configure.ac  configure.in  mkinstalldirs  openaprs.botchk
bursts/: auth.burst.example
etc/: example.conf  openaprs.conf.example
include/: App_Log.h  Cfg.h  Command.h  Create.h  DBI.h  Decay.h  EarthTools.h  Event.h  Feed.h  Flag.h  History.h  Insert.h  LineBuffer.h  Log.h  MemcachedController.h  Module.h  ModuleList.h  NMEA.h  Network.h  OpenAPRS_Abstract.h  OpenAPRS_Log.h  Options.h  SSQLS.h  Send.h  Serialize.h  Server.h  StdinController.h  Store.h  Table.h  ThreadMessage.h  Timer.h  Uplink.h  Vars.h  Worker.h  config.h  defs.h  defs.h.in  eventCommands.h  match.h  mic_e.h  (+10 more)
libraries/: Makefile.am  openframe.sh  svn.externals
libraries/aprs/: APRS.cpp  APRS.h  Makefile.am  StringToken.cpp  StringToken.h  StringTool.cpp  StringTool.h  UnitTest.cpp  UnitTest.h
libraries/openframe/: configure.ac  memtest  sockserv
libraries/openframe/include/openframe/: App_Abstract.h  Command.h  ConnectionManager.h  DBI.h  Fifo.h  Flag.h  ListenController.h  Logger.h  OFLock.h  Result.h  Serialize.h  SocketBase.h  Stopwatch.h  StringToken.h  TestController.h  ThreadMessage.h  Url.h  Vars.h  openframe.h  scoped_lock.h  serializable.h
libraries/openframe/lib/: libopenframe.so.0
libraries/openframe/src/: App_Abstract.cpp  Command.cpp  ConnectionManager.cpp  DBI.cpp  Fifo.cpp  ListenController.cpp  Makefile.am  OFLock.cpp  Result.cpp  RunTool.cpp  Serialize.cpp  SocketBase.cpp  Stopwatch.cpp  TestController.cpp  Vars.cpp  serializable.cpp  stdinADDMODULE.cpp  stdinBINARY.cpp  stdinBOOKMARKS.cpp  stdinCAT.cpp  stdinDTREE.cpp  stdinHELP.cpp  stdinHISTORY.cpp  stdinQUIT.cpp  stdinRELOADMODULE.cpp  stdinREMOVEMODULE.cpp  stdinSETCONFIG.cpp  stdinSHOWCONFIG.cpp
libraries/openframe/src/logging/: logstreambuf.cpp
libraries/openframe/test/: Makefile.am  counter  feedtest  feedtest.cpp  loghup
libraries/opensat/: configure.ac  libtool
libraries/opensat/lib/: libopensat.so.0  libopensat.so.0.0.0
libraries/openstats/lib/: libopenstats.so.0.0.0
libraries/openstats/src/: StatsClient.cpp  StatsClient_Interface.cpp
libraries/putmysql/: Makefile.am  PutMySQL.cpp  PutMySQL.h
libraries/stomp/: feedtest
libraries/stomp/lib/: libstomp.so.0.0.0
libraries/stomp/src/: Exchange.cpp  ExchangeManager.cpp  Exchange_Fanout.cpp  Exchange_Topic.cpp  Makefile.am  StompClient.cpp  StompFrame.cpp  StompMessage.cpp  StompParser.cpp  StompPeer.cpp  StompServer.cpp  StompStats.cpp  Subscription.cpp
libraries/stomp/test/: Feed.cpp  Feed.h  Makefile.am  feedtest.cpp  parsernul  parsernul.cpp  parsertest  parsertest.cpp
m4/: net.m4
modules/: Makefile.am
modules/apns/: APNS.cpp  APNS.h  ApnsAbstract.cpp  ApnsAbstract.h  ApnsLog.h  ApnsLog_OpenAPRS.h  ApnsMessage.cpp  ApnsMessage.h  FeedbackController.cpp  FeedbackController.h  Makefile.am  PushController.cpp  PushController.h  SslController.cpp  SslController.h  apns.cpp  apns.h  apnsCommands.h  eventMESSAGETOPUSH.cpp  stdinAPNSPUSH.cpp  stdinAPNSPUSHFAKE.cpp  stdinAPNSTESTPUSH.cpp  stdinAPNSTESTTHROUGHPUT.cpp  timerTESTTHROUGHPUT.cpp
modules/dcc/: DCC.cpp  DCC.h  DCCUser.cpp  DCCUser.h  DCC_Abstract.h  DCC_Command.cpp  DCC_Command.h  DCC_Log.h  Fields.cpp  Fields.h  Listener.cpp  Listener.h  Makefile.am  Reply.cpp  Reply.h  Symbols.cpp  Symbols.h  Worker.cpp  Worker.h  dcc.cpp  dcc.h  dccADDMODULE.cpp  dccCHANGEUSER.cpp  dccCHECKMESSAGES.cpp  dccCREATEMESSAGE.cpp  dccCREATEOBJECT.cpp  dccCREATEPOSITION.cpp  dccCommands.h  dccFINDULS.cpp  dccFINDUSER.cpp  dccFREQUENCY.cpp  dccKILLOBJECT.cpp  dccLASTPOSITION.cpp  dccLASTWEATHER.cpp  dccLIVE.cpp  dccLOGIN.cpp  dccMESSAGING.cpp  dccPASSWORDRESET.cpp  dccPINGPONG.cpp  dccPOSITIONHISTORY.cpp  (+14 more)
modules/mgmt/: MGMT.cpp  MGMT.h  MGMT_DBI.cpp  MGMT_DBI.h  Makefile.am  mgmt.cpp  mgmt.h  mgmtCommands.h  stdinACTIVATE.cpp  stdinMEMCACHEDGET.cpp  stdinSHOWUSER.cpp  stdinVERIFY.cpp
modules/rollup/: DBI_Rollup.cpp  DBI_Rollup.h  Makefile.am  Rollup.cpp  Rollup.h  Rollup_Abstract.h  Rollup_Log.h  Worker.cpp  Worker.h  rollup.cpp  rollup.h  rollupCommands.h
modules/sat/: DBI_Sat.cpp  DBI_Sat.h  Makefile.am  Sat.cpp  Sat.h  SatServer.cpp  SatServer.h  sat.cpp  sat.h  satCommands.h
modules/stomp/: Makefile.am  Stomp.cpp  Stomp.h  StompController.cpp  StompController.h  StompFrame.h  StompMessage.h  StompPeer.cpp  StompPeer.h  StompServer.cpp  StompServer.h  stomp.cpp  stomp.h  stompCommands.h
sql/: dump.sh  openaprs.sql
sql/schema/v2/: slow_lastposition.php  slow_lastposition.sql  slow_query.sql  slow_update.php  slow_weather.php  slow_weather.sql  update_position.php  update_weather.php  v1_to_v2.sql
sql/schema/v3/: convertForUnitAndSystem.sql  convertUnitTo.sql  convertUnitToString.sql  getChatBySequence.sql  getDirectionFromCourse.sql  getLastpositionByLatLng.sql  getLastpositionByName.sql  getLastpositionBySource.sql  getLastweatherBySource.sql  getLicenseClassByToken.sql  getMemLastpositionByLatLng.sql  getMemPositionsBySource.sql  getNextChatSeq.sql  getPositionBySourceAndTime.sql  getPositionsBySource.sql  getSavedLastpositionByLatLng.sql  getSavedLastpositionBySource.sql  getSavedPositionBySourceAndTime.sql  getSavedPositionsBySource.sql  getShortDirectionFromCourse.sql  getUlsByCallsign.sql  getUlsByFrn.sql  getUlsByUsi.sql  getViewByHash.sql  getWeatherStringBySource.sql  (+7 more)
src/: Command.cpp  Create.cpp  DBI.cpp  Decay.cpp  EarthTools.cpp  Event.cpp  Feed.cpp  Insert.cpp  LineBuffer.cpp  Log.cpp  Makefile.am  MemcachedController.cpp  Module.cpp  ModuleList.cpp  NMEA.cpp  Network.cpp  OpenAPRS_Abstract.cpp  Options.cpp  Send.cpp  Serialize.cpp  Server.cpp  StdinController.cpp  Store.cpp  Table.cpp  Uplink.cpp  Vars.cpp  Worker.cpp  eventMESSAGETOACK.cpp  eventMESSAGETOEMAIL.cpp  eventMESSAGETOSQL.cpp  eventMESSAGETOVERIFY.cpp  eventPOSITIONTOSQL.cpp  eventRAWTOSQL.cpp  eventTELEMETRYTOSQL.cpp  main.cpp  match.cpp  md5.cpp  mic_e.cpp  openaprs  openaprs_string.cpp  (+19 more)
tools/scripts/: buildall.sh  debug.sh  ps.sh  valgrind.sh
(+18 files in other folders)
