lib_LTLIBRARIES = libapns.la
libapns_la_SOURCES = APNS.cpp \
                     apns.cpp \
                     ApnsAbstract.cpp \
                     ApnsMessage.cpp \
                     FeedbackController.cpp \
                     eventMESSAGETOPUSH.cpp \
                     stdinAPNSPUSH.cpp \
                     stdinAPNSPUSHFAKE.cpp \
                     stdinAPNSTESTPUSH.cpp \
                     stdinAPNSTESTTHROUGHPUT.cpp \
                     timerTESTTHROUGHPUT.cpp \
                     PushController.cpp \
                     SslController.cpp

libapns_la_LDFLAGS = -module -export-dynamic
