lib_LTLIBRARIES = libdcc.la
libdcc_la_SOURCES = DCC.cpp \
                    DCC_Command.cpp \
                    DCCUser.cpp \
                    Fields.cpp \
                    Listener.cpp \
                    Reply.cpp \
                    Symbols.cpp \
                    Worker.cpp \
                    dcc.cpp \
                    dccADDMODULE.cpp \
                    dccCHANGEUSER.cpp \
                    dccCHECKMESSAGES.cpp \
                    dccCREATEMESSAGE.cpp \
                    dccCREATEOBJECT.cpp \
                    dccCREATEPOSITION.cpp \
                    dccFINDULS.cpp \
                    dccFINDUSER.cpp \
                    dccFREQUENCY.cpp \
                    dccKILLOBJECT.cpp \
                    dccLASTPOSITION.cpp \
                    dccLASTWEATHER.cpp \
                    dccLIVE.cpp \
                    dccLOGIN.cpp \
                    dccMESSAGING.cpp \
                    dccPASSWORDRESET.cpp \
                    dccPINGPONG.cpp \
                    dccPOSITIONHISTORY.cpp \
                    dccQUERYLOG.cpp \
                    dccQUIT.cpp \
                    dccREGISTERNOTIF.cpp \
                    dccRELOADMODULE.cpp \
                    dccREMOVEMODULE.cpp \
                    dccRESENDACTIVATION.cpp \
                    dccSEED.cpp \
                    dccSIGNUP.cpp \
                    dccTELEMETRY.cpp \
                    dccUID.cpp \
                    dccWALLOPS.cpp \
                    dccWEATHERHISTORY.cpp \
                    eventMESSAGETOSESSION.cpp \
                    eventPOSITIONTOLIVE.cpp

libdcc_la_LDFLAGS = -module -export-dynamic
