lib_LTLIBRARIES = libmgmt.la
libmgmt_la_SOURCES = \
                     MGMT.cpp \
                     MGMT_DBI.cpp \
                     mgmt.cpp \
                     stdinACTIVATE.cpp \
                     stdinMEMCACHEDGET.cpp \
                     stdinSHOWUSER.cpp \
                     stdinVERIFY.cpp

libmgmt_la_LDFLAGS = -module -export-dynamic
