lib_LTLIBRARIES = libopenframe.la
libopenframe_la_SOURCES = App_Abstract.cpp \
                          Command.cpp \
                          ConfController.cpp \
                          ConnectionManager.cpp \
                          DBI.cpp \
                          Fifo.cpp \
                          Intval.cpp \
                          PeerController.cpp \
                          LineBuffer.cpp \
                          ListenController.cpp \
                          Logger.cpp \
                          Module.cpp \
                          ModuleList.cpp \
                          OFLock.cpp \
                          Result.cpp \
                          RunTool.cpp \
                          Serialize.cpp \
                          serializable.cpp \
                          SocketController.cpp \
                          SocketBase.cpp \
                          Stopwatch.cpp \
                          StringToken.cpp \
                          StringTool.cpp \
                          scoped_lock.cpp \
                          stdinADDMODULE.cpp \
                          stdinBINARY.cpp \
                          stdinBOOKMARKS.cpp \
                          stdinCAT.cpp \
                          stdinDTREE.cpp \
                          stdinHELP.cpp \
                          stdinHISTORY.cpp \
                          stdinQUIT.cpp \
                          stdinRELOADMODULE.cpp \
                          stdinREMOVEMODULE.cpp \
                          stdinSETCONFIG.cpp \
                          stdinSHOWCONFIG.cpp \
                          TestController.cpp \
                          Url.cpp \
                          VarController.cpp \
                          Vars.cpp \
                          md5.cpp \
                          md5wrapper.cpp \
                          logging/loglevel.cpp \
                          logging/logstream.cpp \
                          logging/logstreambuf.cpp \
                          logging/nullstream.cpp \
                          logging/nullstreambuf.cpp
