bin_PROGRAMS = feedtest counter sockserv memtest loghup
feedtest_SOURCES = feedtest.cpp
feedtest_LDFLAGS = -lopenframe

counter_SOURCES = counter.cpp
counter_LDFLAGS = -lopenframe

sockserv_SOURCES = socketserver.cpp
sockserv_LDFLAGS = -lopenframe

memtest_SOURCES = memtest.cpp
memtest_LDFLAGS = -lopenframe

loghup_SOURCES = loghup.cpp
loghup_LDFLAGS = -lopenframe
